Docs: Fix hero title on mobile

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -31,6 +31,10 @@
   .heroBanner {
     padding: 2rem;
   }
+
+  .heroTitle {
+    font-size: 2.5rem;
+  }
 }
 
 .buttons {
